Fix a bug with wrong font size in FeedbackSection

--- a/src/components/features/FeedbackSection/FeedbackSection.module.scss
+++ b/src/components/features/FeedbackSection/FeedbackSection.module.scss
@@ -56,7 +56,7 @@
         };
 
         &:last-of-type {
-          font-weight: $font-weight-bold;
+          font-weight: $font-weight-light;
         };
       };
     };
